[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/UI/Lives.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Ammo.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/HUD.gd" type="Script" id=3]
[ext_resource path="res://src/UI/Lives.gd" type="Script" id=4]
[ext_resource path="res://src/UI/Ammo.gd" type="Script" id=5]
[ext_resource path="res://src/UI/uni0553-webfont.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://src/UI/Keys.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UI/Keys.gd" type="Script" id=8]
[ext_resource path="res://src/UI/TimeTrialTimer.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
Label/colors/font_color = Color( 0.87451, 0.878431, 0.909804, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 1 )
Label/styles/normal = null

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=4]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = SubResource( 3 )
Label/styles/normal = null

[sub_resource type="Animation" id=5]
length = 2.6
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 2.3, 2.6 ),
"transitions": PoolRealArray( 0.2, 0.2, 0.2, 0.2, 0.2 ),
"update": 0,
"values": [ Vector2( 384, 216 ), Vector2( 384, 216 ), Vector2( 384, 16 ), Vector2( 384, 16 ), Vector2( 384, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 2.3, 2.6 ),
"transitions": PoolRealArray( 0.2, 0.2, 0.2, 0.2, 0.2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 100 ), Vector2( 0, 100 ), Vector2( 0, 108 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelText:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.3, 2.6 ),
"transitions": PoolRealArray( 0.2, 0.2 ),
"update": 0,
"values": [ Vector2( 0, 96 ), Vector2( 384, 96 ) ]
}

[node name="HUD" type="Control"]
margin_right = 384.0
margin_bottom = 216.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" parent="." instance=ExtResource( 1 )]
margin_left = 1.0
margin_top = 1.0
margin_right = -5.4
margin_bottom = 17.0
script = ExtResource( 4 )

[node name="Ammo" parent="." instance=ExtResource( 2 )]
margin_left = 34.0
margin_top = 1.0
margin_right = 66.0
margin_bottom = 17.0
script = ExtResource( 5 )

[node name="Keys" parent="." instance=ExtResource( 7 )]
script = ExtResource( 8 )

[node name="TimeTrialTimer" parent="." instance=ExtResource( 9 )]
margin_left = 311.0
margin_top = 1.0
margin_right = 383.0
margin_bottom = 17.0

[node name="version" type="Label" parent="."]
visible = false
margin_left = 334.0
margin_top = 204.0
margin_right = 382.0
margin_bottom = 216.0
theme = SubResource( 2 )
text = "0.0.1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPS" type="Label" parent="."]
margin_left = 334.0
margin_top = 204.0
margin_right = 382.0
margin_bottom = 216.0
theme = SubResource( 2 )
text = "60"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -8.0
margin_right = 192.0
margin_bottom = 8.0
color = Color( 0.054902, 0.054902, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelText" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -12.0
margin_right = 192.0
margin_bottom = 11.0
theme = SubResource( 4 )
text = "nothing"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "colorrect"
anims/colorrect = SubResource( 5 )

[connection signal="ammo_changed" from="." to="Ammo" method="_on_HUD_ammo_changed"]
[connection signal="keys_changed" from="." to="Keys" method="_on_HUD_keys_changed"]
[connection signal="lives_changed" from="." to="Lives" method="_on_HUD_lives_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
